# LLM-Twin-Modern

./: .gitignore  Dockerfile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml
llm_engineering/application/: log_setup.py  settings.py
llm_engineering/application/api/: main.py
llm_engineering/application/services/: chunker.py  embedder.py  hello_service.py  llm_client.py  mongo_store.py  rag_service.py  st_embedder.py  vector_store.py  vector_store_dense.py  vector_store_qdrant.py  web_loader.py
scripts/: index_demo.ps1  langchain_flow.ps1
